--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ body {
   }
   
   footer {
-    margin-top: 50px;
+    margin-top: 125px;
     text-align: center;
-    position: fixed;
+    position: sticky;
     width: 100%;
     bottom: 5px;
     background-color: #242f44;
